# wake-up-on-lan

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  build.rs  config.json  index.html  readme.md
.github/workflows/: release.yml  rust.yml
proto/: control.proto  helloworld.proto
server/: Cargo.toml  build.rs  readme.md
server/src/: config.rs  conn.rs  main.rs  password.rs
src/: config.rs  index.rs  main.rs  password.rs  wake.rs
static/: index.html
