[package]
name = "wake-up-on-lan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false

[dependencies]
rand = "0.8"
serde_json = "1.0"
futures = "0.3"
actix-files = "0.6.1"
dotenv = "0.15.0"

[dependencies.actix-web]
version = "4"
default-features = false
features = ["macros"]

[dependencies.serde]
version = "1.0"
features = ["derive"]